Pic 3361 spring boot 3 upgrade (#1124)
* PIC-3361 Spring Boot 3 upgrade (WIP)

* PIC-3361 BaseIntTest fix and Jackson date serialization fix

* PIC-3361 CCSSchemaFilter fix

* PIC-3361 Numerous test fixes

* PIC-3361 circleCI Jdk image upgrade

* PIC-3361 circleCI Jdk image upgrade

* PIC-3361 Set Gradle java toolchain language version

* PIC-3361 set Gradle Kotlin toolchain language version

* PIC-3361 Remove Source compatibiliy from gradle

* PIC-3361 Spring Boot 3 minor version upgrade

* PIC-3361 Re-instate DeploymentLogger

* PIC-3361 Post static code analysis tidy up